# My-Python-Project-Template

./: CLAUDE.md  README.md  REVERT_COMMIT  SITREP.md  TEST_COVERAGE_ANALYSIS.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/: labeler.yml
.github/.github/workflows/: .pre-commit-config.yaml  python-project.yml  setup-python.yml
.github/workflows/: ci.yml  code-review.yml  greetings.yml  huggingface-sync.yml  label-sponssors.yml  pyright-check.yml.  python-app.yml  setup-python.yml
src/my_project/: __init__.py  file_utils.py  main.py
tests/: __init__.py  conftest.py  test_file_utils.py  test_main.py
